--- a/Movies/templates/movies/movies_category.html
+++ b/Movies/templates/movies/movies_category.html
@@ -26,34 +26,36 @@ $(document).ready(function(){
            </div>
            </div>
           <br>
+          <form>
           <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio0" value="option0">
-            <label class="form-check-label" for="inlineRadio0">0</label>
-          </div>
-          <div class="form-check form-check-inline">
+            <label class="form-check-label" for="inlineRadio0">0  </label>
+            </div>
+            <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
             <label class="form-check-label" for="inlineRadio1">1</label>
-          </div>
-          <div class="form-check form-check-inline">
+            </div>
+            <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
             <label class="form-check-label" for="inlineRadio2">2</label>
-          </div>
-          <div class="form-check form-check-inline">
+            </div>
+            <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
             <label class="form-check-label" for="inlineRadio3">3</label>
-          </div>
-          <div class="form-check form-check-inline">
+            </div>
+            <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
             <label class="form-check-label" for="inlineRadio4">4</label>
-          </div>
-          <div class="form-check form-check-inline">
+            </div>
+            <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
             <label class="form-check-label" for="inlineRadio5">5</label>
-          </div>
-          <div class="form-check form-check-inline">
+            </div>
+            <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadioNotSeen" value="optionNotSeen">
             <label class="form-check-label" for="inlineRadioNotSeen">Not seen</label>
           </div>
+          </form>
         </div>
     </div>
      </div>
