--- a/Movies/templates/movies/rating-star2.html
+++ b/Movies/templates/movies/rating-star2.html
@@ -15,6 +15,8 @@
 <span class="fa fa-star" id="star5-25" onclick="add_star(this,5,25)"></span>
 <span class="fa fa-star" id="star6-25" onclick="add_star(this,6,25)"></span>
 <span class="fa fa-close" id="notseen-25" style="float: right" onclick="add_notseen(this,25)"></span>
+<br>
+<button name="button-name" value="fav_HTML" class="btn btn-primary btn-lg active pull-right" role="button" onclick="save_ratings()">Next page</button>
 <script>
   // https://bootsnipp.com/snippets/dlaaN
   function add_star(ths,sno,movie_id){
@@ -46,5 +48,33 @@
       document.getElementById("star"+6+"-"+movie_id).className="fa fa-star"
     }
   }
+  function save_ratings(ths){
+     movie_id = 25
+     rating = 0
+    if (document.getElementById("notseen-"+movie_id).className == "fa fa-close checked") {
+      rating = -1
+    } else if (document.getElementById("star"+6+"-"+movie_id).className == "fa fa-star checked") {
+      rating = 6
+    } else if (document.getElementById("star"+5+"-"+movie_id).className == "fa fa-star checked") {
+      rating = 5
+    } else if (document.getElementById("star"+4+"-"+movie_id).className == "fa fa-star checked") {
+      rating = 4
+    } else if (document.getElementById("star"+3+"-"+movie_id).className == "fa fa-star checked") {
+      rating = 3
+    } else if (document.getElementById("star"+2+"-"+movie_id).className == "fa fa-star checked") {
+      rating = 2
+    } else if (document.getElementById("star"+1+"-"+movie_id).className == "fa fa-star checked") {
+      rating = 1
+    }
+    alert('rating: ' + rating);
+ }
+  // // A simple javascript function
+  // function hello() {
+  //     alert('hello');
+  // }
+  //
+  // // Let's make the function run
+  // // when the page finishes loading.
+  // window.onload=hello;
 </script>
 {% endblock %}
