--- a/Movies/templates/movies/rating-star2.html
+++ b/Movies/templates/movies/rating-star2.html
@@ -48,33 +48,44 @@
       document.getElementById("star"+6+"-"+movie_id).className="fa fa-star"
     }
   }
-  function save_ratings(ths){
-     movie_id = 25
-     rating = 0
-    if (document.getElementById("notseen-"+movie_id).className == "fa fa-close checked") {
+  // parses current document and gets an array of
+  // currently rendered movies ids
+  // (returns array of integers)
+  function get_movie_ids(ths) {
+    var movie_notseen_elements = $('*[id^="notseen-"]');
+    var movie_ids = new Array();
+    for (var i=0; i<movie_notseen_elements.length; i++) {
+      // e.g. notseen-25
+      var css_identifier = movie_notseen_elements[i].id
+      var movie_id = css_identifier.split('-')[1]
+      movie_ids.push(movie_id)
+    }
+    return movie_ids
+  }
+function save_ratings(ths){
+  movie_ids = get_movie_ids()
+  for (var i=0; i<movie_ids.length; i++) {
+    // for each movie
+    movie_id = movie_ids[i]
+    rating = 0
+    if (document.getElementById("notseen-"+movie_id).className.includes("checked")) {
       rating = -1
-    } else if (document.getElementById("star"+6+"-"+movie_id).className == "fa fa-star checked") {
+    } else if (document.getElementById("star"+6+"-"+movie_id).className.includes("checked")) {
       rating = 6
-    } else if (document.getElementById("star"+5+"-"+movie_id).className == "fa fa-star checked") {
+    } else if (document.getElementById("star"+5+"-"+movie_id).className.includes("checked")) {
       rating = 5
-    } else if (document.getElementById("star"+4+"-"+movie_id).className == "fa fa-star checked") {
+    } else if (document.getElementById("star"+4+"-"+movie_id).className.includes("checked")) {
       rating = 4
-    } else if (document.getElementById("star"+3+"-"+movie_id).className == "fa fa-star checked") {
+    } else if (document.getElementById("star"+3+"-"+movie_id).className.includes("checked")) {
       rating = 3
-    } else if (document.getElementById("star"+2+"-"+movie_id).className == "fa fa-star checked") {
+    } else if (document.getElementById("star"+2+"-"+movie_id).className.includes("checked")) {
       rating = 2
-    } else if (document.getElementById("star"+1+"-"+movie_id).className == "fa fa-star checked") {
+    } else if (document.getElementById("star"+1+"-"+movie_id).className.includes("checked")) {
       rating = 1
     }
-    alert('rating: ' + rating);
- }
-  // // A simple javascript function
-  // function hello() {
-  //     alert('hello');
-  // }
-  //
-  // // Let's make the function run
-  // // when the page finishes loading.
-  // window.onload=hello;
+    alert('movie id: ' + movie_ids[i] + ' rating: '+ rating);
+  }
+}
+
 </script>
 {% endblock %}
