--- a/Movies/templates/movies/movies_category.html
+++ b/Movies/templates/movies/movies_category.html
@@ -44,6 +44,7 @@ $(document).ready(function(){
 });
 </script>
 <p style="font-size: 0.8em;">You are filling the poll as: {{ request.session.user_name }}</p>
+<p id="user-id">TODO: make it hidden and show only user id<p>
 <p style="font-size: 0.8em;">Your progress: {{ request.session.movies_rated }}/200</p>
 <h2 style="text-align: center;">Movies of category: {{ category }}</h2>
 <br>
