move rating js code to separate static file, make movies/test_rating for testing

--- a/Movies/templates/movies/test_rating.html
+++ b/Movies/templates/movies/test_rating.html
@@ -20,6 +20,7 @@
 <br>
 <form action="." method="post">
   {% csrf_token %}
-  <button name="button-name" value="fav_HTML" class="btn btn-primary btn-lg active pull-right" role="button" onclick="save_ratings()">Next page</button>
+  <button name="button-name" value="fav_HTML" class="btn btn-primary btn-lg active pull-right" role="button" onclick="print_rate()">Rate</button>
+  <button name="button-name" value="fav_HTML" class="btn btn-primary btn-lg active pull-right" role="button" onclick="save_ratings()">Rate and POST</button>
 </form>
 {% endblock %}
