--- a/Movies/templates/movies/test_rating.html
+++ b/Movies/templates/movies/test_rating.html
@@ -8,15 +8,18 @@
 }
 </style>
 
-<p id="user-id">456<p>
 <h2>Star Rating</h2>
-<span class="fa fa-star" id="star1-25" onclick="add_star(this,1,25)"></span>
-<span class="fa fa-star" id="star2-25" onclick="add_star(this,2,25)"></span>
-<span class="fa fa-star" id="star3-25" onclick="add_star(this,3,25)"></span>
-<span class="fa fa-star" id="star4-25" onclick="add_star(this,4,25)"></span>
-<span class="fa fa-star" id="star5-25" onclick="add_star(this,5,25)"></span>
-<span class="fa fa-star" id="star6-25" onclick="add_star(this,6,25)"></span>
-<span class="fa fa-close" id="notseen-25" style="float: right" onclick="add_notseen(this,25)"></span>
+{%  for movie in movies %}
+<h3>{{ movie.movie_title}}</h3>
+<span class="fa fa-star" id="star1-{{movie.movie_id}}" onclick="add_star(this,1,{{movie.movie_id}})"></span>
+<span class="fa fa-star" id="star2-{{movie.movie_id}}" onclick="add_star(this,2,{{movie.movie_id}})"></span>
+<span class="fa fa-star" id="star3-{{movie.movie_id}}" onclick="add_star(this,3,{{movie.movie_id}})"></span>
+<span class="fa fa-star" id="star4-{{movie.movie_id}}" onclick="add_star(this,4,{{movie.movie_id}})"></span>
+<span class="fa fa-star" id="star5-{{movie.movie_id}}" onclick="add_star(this,5,{{movie.movie_id}})"></span>
+<span class="fa fa-star" id="star6-{{movie.movie_id}}" onclick="add_star(this,6,{{movie.movie_id}})"></span>
+<span class="fa fa-close" id="notseen-{{movie.movie_id}}" style="float: right" onclick="add_notseen(this,{{movie.movie_id}})"></span>
+<br>
+{% endfor %}
 <br>
 <form action="." method="post">
   {% csrf_token %}
