--- a/Movies/templates/movies/rating.html
+++ b/Movies/templates/movies/rating.html
@@ -13,8 +13,13 @@ $(document).ready(function(){
   $('[data-toggle="popover"]').popover();
 });
 </script>
-<p style="font-size: 0.8em;">You are filling the poll as: {{ request.session.user_name }}</p>
-<p style="font-size: 0.8em;">Your progress: {{ request.session.movies_rated }}/200</p>
+<div class="row">
+  <h5 style="margin-left: 3em;">Your name: {{ request.session.user_name }}</h5>
+</div>
+<div class="row">
+  <h5 style="margin-left: 3em;">Your progress: {{ request.session.movies_rated }}/200</h5>
+</div>
+
 <h2 style="text-align: center;">Movies of category: {{ category }}</h2>
 <br>
 
